# Hoshi2Star

./: .gitignore  .mcp.json  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.fr.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  skills-lock.json
.cargo/: config.toml
.claude/: settings.json
docs/: architecture.md  promo-plan.md  runpod.fr.md  runpod.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial.sql  0002_tm.sql  0003_glossary.sql  0004_source_files_translation_secs.sql
src-tauri/prompts/glossary/: default.toml
src-tauri/prompts/translate/: default.toml
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: export.rs  glossary.rs  mod.rs  project.rs  qa.rs  translate.rs
src-tauri/src/core/: glossary.rs  manifest.rs  mod.rs  qa.rs  report.rs  tm.rs
src-tauri/src/db/: pool.rs
src-tauri/src/domain/: types.rs
src-tauri/src/engines/: detector.rs  filter.rs  mod.rs
src-tauri/src/engines/mv_mz/: decryptor.rs  extractor.rs  injector.rs
src-tauri/src/engines/vx_ace/: extractor.rs  injector.rs
src-tauri/src/engines/wolf/: dat_parser.rs  decryptor.rs  encoding.rs  extractor.rs  injector.rs  mod.rs  placeholders.rs
src-tauri/src/engines/wolf/decrypt/: legacy_xor.rs  mod.rs  wolfx.rs
src-tauri/src/engines/wolf/v3_format/: coder.rs  command.rs  common_events.rs  compression.rs  map.rs  mod.rs
src-tauri/src/llm/: batch.rs  mod.rs  pipeline.rs  progress.rs  prompts.rs  provider.rs  split.rs  tokenizer.rs
src-tauri/src/utils/: text.rs  time.rs
(+117 files in other folders)
