[package]
name = "hoshi2star"
version = "0.3.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hoshi2star_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-mcp-bridge = "0.11"
marshal-rs = "2.0.1"
log = "0.4"
encoding_rs = "0.8"
wolfrpg-map-parser = "0.6"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"


